--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -41,3 +41,10 @@ html {
     font-style: normal;
 }
 
+@font-face {
+    font-family: "Gochi-Hand";
+    src: url("../../public/fonts/GochiHand-Regular.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+
