menyambungkan antara menu di dashboard admin ke menu di landing page, memperbaiki database menu serta menambahkan font telegraf untuk di tampilan views

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -48,3 +48,10 @@ html {
     font-style: normal;
 }
 
+@font-face {
+    font-family: "Telegraf-Regular";
+    src: url("../../public/fonts/Telegraf-Regular.otf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+
