membuat database dan memperbagus tampilan pada katalog menu, transaksi (ini sudah saling terhubung

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,52 +6,39 @@ html {
     scroll-behavior: smooth;
 }
 
+/* --- CUSTOM FONTS --- */
 @font-face {
     font-family: "Poppins";
     src: url("../../public/fonts/Poppins-Regular.ttf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
+    font-weight: normal; font-style: normal;
 }
-
 @font-face {
     font-family: "Poppins-SemiBold";
     src: url("../../public/fonts/Poppins-SemiBold.ttf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
+    font-weight: normal; font-style: normal;
 }
-
 @font-face {
     font-family: "FreckleFace";
     src: url("../../public/fonts/FreckleFace-Regular.ttf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
+    font-weight: normal; font-style: normal;
 }
-
 @font-face {
     font-family: "SF-Pro-Display";
     src: url("../../public/fonts/Sf-Pro-Display.otf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
+    font-weight: normal; font-style: normal;
 }
-
 @font-face {
     font-family: "Poppins-Light";
     src: url("../../public/fonts/Poppins-Light.ttf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
+    font-weight: normal; font-style: normal;
 }
-
 @font-face {
     font-family: "Gochi-Hand";
     src: url("../../public/fonts/GochiHand-Regular.ttf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
+    font-weight: normal; font-style: normal;
 }
-
 @font-face {
     font-family: "Telegraf-Regular";
     src: url("../../public/fonts/Telegraf-Regular.otf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
+    font-weight: normal; font-style: normal;
 }
-
